增加了删除部署和设置副本数量功能，并且测试通过